--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/choosen-hours.js' %}"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
 {% block extra_js %}
     <script>
         var lastScrollTop = 0;
