--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -27,27 +27,27 @@
         color: #51abac;
     }
     body {
-    background: linear-gradient(45deg, #1e90ff, #4682b4, #87cefa, #add8e6, #ffffff);
-    background-size: 200% 200%;
-    animation: Gradient 10s ease infinite;
-    }
-    @keyframes Gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-    }
+        background: linear-gradient(45deg, #0869a0, #4682b4, #87cefa, #063970, #154c79);
+        background-size: 200% 200%;
+        animation: Gradient 40s ease infinite;
+        }
+        @keyframes Gradient {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+        }
 </style>
 <section>
     <div class="container py-4 py-xl-5" style="padding-top: 10rem!important;">
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3" style="background: white;border-radius: 20px;padding-bottom:20px;">
         <div class="col">
-            <img id="postImage" width="100" height="80" style="width: 350px;height: 341px;object-fit: cover;border-radius: 20px;margin-bottom: 50px;" src="{{ post.image.url }}">
+            <img id="postImage" width="100" height="80" style="width: 350px;height: 341px;object-fit: cover;border-radius: 20px;margin-bottom: 50px;margin-left: 10px;" src="{{ post.image.url }}">
             <div style="margin-bottom:100px;">
                 <a href="{{ post.file.doc.url }}"></a>
                 {% if next_post %}
