front update, division of reservations for today and tomorrow

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/accordion-faq-list.css' %}">
     <link rel="stylesheet" href="{% static 'css/post_detail_style_photo.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Simple-Slider-swiper-bundle.min.css' %}">
     <style>
         .nav-up {
         transform: translateY(-100%);
