--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}LivinnX Amenity Booker{% endblock title %}
 
@@ -6,13 +7,21 @@
     <div class="simple-slider">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" style="background: url(&quot;static/img/_MG_6662_(1)_(1).jpg&quot;) center / cover no-repeat;margin-top: 106px;height: 810px;"></div>
-                <div class="swiper-slide" style="background: url(&quot;static/img/_MG_6700_(1)_(1).jpg&quot;) center / cover no-repeat;margin-top: 106px;height: 810px;"></div>
-                <div class="swiper-slide" style="background: url(&quot;static/img/_MG_6761_(1)_(1).jpg&quot;) center / cover no-repeat;margin-top: 106px;height: 810px;"></div>
+                <div class="swiper-slide" style="background: url(&quot;static/img/slider_1.jpg&quot;) center / cover no-repeat;margin-top: 106px;height: 810px;"></div>
+                <div class="swiper-slide" style="background: url(&quot;static/img/slider_2.jpg&quot;) center / cover no-repeat;margin-top: 106px;height: 810px;"></div>
+                <div class="swiper-slide" style="background: url(&quot;static/img/slider_3.jpg&quot;) center / cover no-repeat;margin-top: 106px;height: 810px;"></div>
+                <div class="swiper-slide" style="background: url(&quot;static/img/slider_4.jpg&quot;) center / cover no-repeat;margin-top: 106px;height: 810px;"></div>
             </div>
             <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
         </div>
     </div>
 {% endblock content %}
+{% block extra_js %}
+<script>
+    var swiper = new Swiper('.swiper-container', {
+        autoplay: {
+            delay: 5000,
+        },
+    });
+</script>
+{% endblock extra_js %}
