--- a/templates/reservation/reservation_detail.html
+++ b/templates/reservation/reservation_detail.html
@@ -33,12 +33,12 @@
                 <button id="regulations-btn" class="btn btn-info" style="margin: auto; display: block;">Terms of use</button>
             </div>
             <div class="col-md-4" style="margin-top: 43px;">
-                <h4 style="text-align: center; color: black;">{{ today }}</h4>
+                <h4 style="text-align: center; color: black;">{{ today|date:'Y-m-d' }}</h4>
                 <div class="hours_container">
                     <div>
                         {% for hour in object.hours_available_today.all %}
-                        <label for="{{ hour }}">
-                            <input type="checkbox" id="{{ hour }}" name="{{ hour }}" class="hour-checkbox today-checkbox" value="{{ hour }}">
+                        <label for="today-{{ hour }}">
+                            <input type="checkbox" id="today-{{ hour }}" name="{{ hour }}" class="hour-checkbox today-checkbox" value="{{ hour }}">
                             <span>{{ hour }}</span>
                         </label>
                         {% endfor %}
@@ -46,12 +46,12 @@
                 </div>
             </div>
             <div class="col-md-4" style="margin-top: 43px;">
-                <h4 style="text-align: center; color: black;">{{ tomorrow }}</h4>
+                <h4 style="text-align: center; color: black;">{{ tomorrow|date:'Y-m-d' }}</h4>
                 <div class="hours_container">
                     <div>
                         {% for hour in object.hours_available_tomorrow.all %}
-                        <label for="{{ hour }}">
-                            <input type="checkbox" id="{{ hour }}" name="{{ hour }}" class="hour-checkbox tomorrow-checkbox">
+                        <label for="tomorrow-{{ hour }}">
+                            <input type="checkbox" id="tomorrow-{{ hour }}" name="{{ hour }}" class="hour-checkbox tomorrow-checkbox" value="{{ hour }}">
                             <span>{{ hour }}</span>
                         </label>
                         {% endfor %}
@@ -61,10 +61,10 @@
             <div class="container" style="margin-top: 100px;">
                 <div class="row">
                     <div class="col-md-4">
-                        <h4 style="text-align: center;">Additional information</h4>
-                        <p style="text-align: center;">{{ object.amenity.additional_info }}</p>
+                        <h4 style="text-align: center;color: white;">Additional information</h4>
+                        <p style="text-align: center;color: white;">{{ object.amenity.additional_info }}</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="color: white;">
                         <h3>Choosen hours</h3>
                         <ul id="chosen-hours-list">
                         </ul>
@@ -79,15 +79,26 @@
 {% block extra_js %}
 <script>
 $(document).ready(function() {
-    var user_hours_booked = {{ hours_booked|length }};
+    var userHoursBookedToday = {{ hours_booked_today|length }};
+    var userHoursBookedTomorrow = {{ hours_booked_tomorrow|length }};
     var user_active = {{ user_active|yesno:"1,0" }};
+    var amenity = "{{ object.amenity.name|lower }}";
+    var today = "{{ today|date:'Y-m-d' }}";
+    var tomorrow = "{{ tomorrow|date:'Y-m-d' }}";
     var maxCheck;
 
     if (user_active) {
-        maxCheck = 4 - user_hours_booked;
-        if(user_hours_booked === 4) {
+        maxCheck = 4 - userHoursBookedToday;
+        if(userHoursBookedToday === 4) {
             maxCheck = 0;
-            swal("Reservation Limit Reached", "You have already made 4 reservations and cannot make any more.", "error");
+            swal({
+                title: "Reservation Limit Reached",
+                text: "You cannot make any more reservations for " + amenity + " today(" + today + ").",
+                icon: "error",
+                customClass: {
+                    container: "center-text",
+                },
+            });
         }
     } else {
         $("section").addClass("no-interaction");
@@ -210,3 +221,8 @@ $(document).ready(function() {
     });
 </script>
 {% endblock extra_js %}
+<style>
+    .center-text {
+        text-align: center;
+    }
+</style>
