--- a/templates/reservation/amenity_list.html
+++ b/templates/reservation/amenity_list.html
@@ -9,9 +9,49 @@
         color: black;
         font-family: 'Bebas Neue', serif;
     }
+    a {
+        text-decoration: none;
+    }
+    .amenity-text {
+        text-decoration: none;
+        background: transparent;
+        transition: 0.4s;
+        border-radius: 6px;
+    }
+    .amenity-text:hover {
+            background: rgba(255, 255, 255, 0.4);
+            border-radius: 10px;
+            color: white;
+            padding-top: 15px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            
+    }
+    body {
+    background: linear-gradient(45deg, #0869a0, #4682b4, #87cefa, #063970, #154c79);
+    background-size: 200% 200%;
+    animation: Gradient 60s ease infinite;
+    }
+    @keyframes Gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+    }
+    .glass-container {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
 </style>
-<section style="background: linear-gradient(#ffffff, rgb(220,121,157) 58%, #c21655 99%);padding-top:10rem!important;padding-bottom:10rem!important">
-    <div class="container text-white bg-primary border rounded border-0 p-4 p-lg-5 py-4 py-xl-5" style="background: linear-gradient(#ffffff 0%, rgb(255,255,255) 12%, #51abac 100%), rgb(81,171,172);border-color: rgb(81,171,172);">
+<section style="padding-top:10rem;padding-bottom:10rem!important">
+    <div class="container glass-container">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
                 <h2 class="text-black">Reservation Panel</h2>
@@ -28,9 +68,11 @@
                         {% endfor %}    
                             <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"></path>
                     </div>
-                    <div class="px-3">
+                    <div class="px-3 amenity-text">
+                        <a href="{% url 'amenity_detail' amenity_slug=amenity.slug amenity_date=today %}">
                         <h4 class="text-black">{{ amenity.name }}</h4>
                         <p style="color: black;">{{ amenity.description }}</p>
+                        </a>
                     </div>
                 </div>
             </div>
