implemented admin app, pagination to be fixed, front update

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,9 @@
 </head>
 <body style="margin: 0px;color: #51abac;">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark d-xl-flex align-items-xl-end portfolio-navbar gradient" style="color: rgb(0,0,0);background: rgb(0,0,0);border-color: rgb(0,0,0);">
-        <div class="container"><a class="navbar-brand logo" href="{% url 'index' %}"><img data-aos="fade" src="{% static 'img/livinn-logo.png' %}" style="width: 10rem;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="{% url 'index' %}"><img data-aos="fade" src="{% static 'img/livinn-logo.png' %}"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" data-aos="fade" data-aos-duration="950" id="navbarNav">
-                <h2 style="color: rgb(255,255,255);font-family: 'Bebas Neue', serif; margin-bottom: 0px!important;">Reservation panel</h2>
+                <h2 style="color: rgb(255,255,255);font-family: 'Bebas Neue', serif;">Reservation panel</h2>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link link-light" href="https://livinnxpoland.pl" style="font-family: 'Bebas Neue', serif;font-size: 20px;">LIVINNX WEBSITE</a></li>
                     <li class="nav-item"><a class="nav-link link-light" href="https://livinnx.panelnajemcy.pl/login" style="font-family: 'Bebas Neue', serif;font-size: 20px;">student panel</a></li>
