--- a/templates/management/pagination.html
+++ b/templates/management/pagination.html
@@ -4,6 +4,9 @@
         {% if page.has_previous %}
         <li class="page-item"><a class="page-link" aria-label="Previous" href="?page={{ page.previous_page_number }}"><span aria-hidden="true">«</span></a></li>
         {% endif %}
+        {% for page_num in total_pages %}
+            <li class="page-item"><a class="page-link" href="#">{{ page_num }}</a></li>
+        {% endfor %}
         <li class="page-item"><a class="page-link" href="#">{{ page.number }}</a></li>
         {% if page.has_next %}
         <li class="page-item"><a class="page-link" aria-label="Next" href="?page={{ page.next_page_number }}"><span aria-hidden="true">»</span></a></li>
