--- a/templates/admin_base.html
+++ b/templates/admin_base.html
@@ -33,17 +33,12 @@
                 <h2 style="color: rgb(255,255,255);font-family: 'Bebas Neue', serif; margin-bottom: 0px!important;">Amenity Booker | Admin panel</h2>
                 <ul class="navbar-nav ms-auto">
                     {% if request.user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link link-light" href="#" style="font-family: 'Bebas Neue', serif;font-size: 20px;">Tenants</a></li>
-                        {% if section == "dashboard" %}
-                        <li class="nav-item"><a class="nav-link link-light" href="{% url 'dashboard' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;color: #51abac!important;">Dashboard</a></li>
-                        {% else %}
-                        <li class="nav-item"><a class="nav-link link-light" href="{% url 'dashboard' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;">Dashboard</a></li>
-                        {% endif %}
-                        {% if section == "reservation" %}
-                        <li class="nav-item"><a class="nav-link link-light" href="{% url 'reservation' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;color: #51abac!important;">Reservation</a></li>
-                        {% else %}
-                        <li class="nav-item"><a class="nav-link link-light" href="{% url 'reservation' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;">Reservation</a></li>
-                        {% endif %}
+                    <li class="nav-item"><a class="nav-link link-light" href="{% url 'admin_tenants' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;">Tenants</a></li>
+                    {% if section == "profile" %}
+                    <li class="nav-item"><a class="nav-link link-light" href="{% url 'admin_dashboard' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;color: #51abac!important;">Dashboard</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link link-light" href="{% url 'admin_dashboard' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;">Dashboard</a></li>
+                    {% endif %}
                     <li class="nav-item"><a class="nav-link link-light" href="{% url 'admin_dashboard' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;">Hello, {{ user.first_name }}</a></li>
                     <li class="nav-item"><a class="nav-link text-center" href="{% url 'logout' %}" style="font-family: 'Bebas Neue', serif;font-size: 20px;color: rgb(255,255,255);background: var(--bs-red);border-color: rgb(194,22,85);width: 99px;margin: 0px;padding: 7px;">LOGOUT</a></li>
                     {% else %}
@@ -66,5 +61,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+{% block extra_js %}
+{% endblock extra_js %}
 </body>
 </html>
