--- a/templates/management/pagination.html
+++ b/templates/management/pagination.html
@@ -1,12 +1,45 @@
 {% load static %}
 <nav>
-    <ul class="pagination pagination-sm mb-0 justify-content-center">
-        {% if page.has_previous %}
-        <li class="page-item"><a class="page-link" aria-label="Previous" href="?page={{ page.previous_page_number }}"><span aria-hidden="true">«</span></a></li>
-        {% endif %}
-        <li class="page-item"><a class="page-link" href="#">{{ page.number }}</a></li>
-        {% if page.has_next %}
-        <li class="page-item"><a class="page-link" aria-label="Next" href="?page={{ page.next_page_number }}"><span aria-hidden="true">»</span></a></li>
-        {% endif %}
-    </ul>
+    <div class="d-flex justify-content-between align-items-center">
+        <ul class="pagination pagination-sm mb-0">
+            {% if page.has_previous %}
+            <li class="page-item"><a class="page-link" aria-label="Previous" href="?page={{ page.previous_page_number }}"><span aria-hidden="true">«</span></a></li>
+            {% endif %}
+            {% with current_page=page.number %}
+            {% with prev_page_1=current_page|add:"-1" %}
+            {% with prev_page_2=current_page|add:"-2" %}
+            {% with next_page_1=current_page|add:"1" %}
+            {% with next_page_2=current_page|add:"2" %}
+                {% if prev_page_2 > 0 %}
+                    <li class="page-item"><a class="page-link" href="?page={{ prev_page_2 }}">{{ prev_page_2 }}</a></li>
+                {% endif %}
+                {% if prev_page_1 > 0 %}
+                    <li class="page-item"><a class="page-link" href="?page={{ prev_page_1 }}">{{ prev_page_1 }}</a></li>
+                {% endif %}
+                <li class="page-item active"><span class="page-link">{{ current_page }}</span></li>
+                {% if next_page_1 <= page.paginator.num_pages %}
+                    <li class="page-item"><a class="page-link" href="?page={{ next_page_1 }}">{{ next_page_1 }}</a></li>
+                {% endif %}
+                {% if next_page_2 <= page.paginator.num_pages %}
+                    <li class="page-item"><a class="page-link" href="?page={{ next_page_2 }}">{{ next_page_2 }}</a></li>
+                {% endif %}
+            {% endwith %}
+            {% endwith %}
+            {% endwith %}
+            {% endwith %}
+            {% endwith %}
+            {% if page.has_next %}
+            <li class="page-item"><a class="page-link" aria-label="Next" href="?page={{ page.next_page_number }}"><span aria-hidden="true">»</span></a></li>
+            {% endif %}
+        </ul>
+        <form method="GET">
+            <div class="input-group input-group-sm w-auto">
+                <input class="form-control form-control-sm" type="number" name="page" placeholder="{{ page.number }}" min="1" max="{{ page.paginator.num_pages }}" style="width:50px;">
+                <button type="submit" class="btn btn-outline-primary btn-sm" style="font-size:20px;">Go</button>
+            </div>
+        </form>
+        <div>
+            <p style="font-family: 'Bebas Neue', serif;font-size:20px;">Page {{ page.number }} out of {{ page.paginator.num_pages }}</p>
+        </div>
+    </div>
 </nav>
