--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
                     <a href="https://www.facebook.com/livinnXkrakow"><img src="{% static 'img/footer-icon-fb.png' %}" width="45" height="45" style="margin-bottom: 18px;margin-right: 10px;"></a>
                     <a href="https://www.instagram.com/livinnxkrakow/"><img src="{% static 'img/footer-icon-in.png' %}" style="margin-bottom: 18px;"></a>
                     <a href="https://www.youtube.com/@livinnxkrakow8115"><img src="{% static 'img/footer-icon-yt.png' %}" style="margin-bottom: 18px;margin-left: 10px;"></a>   
-                <p class="mb-0" style="color: white;">Copyright © 2023 Igor Sokół | GGH Management Sp. z o.o. sk</p>
+                <p class="mb-0" style="color: white;">Copyright © 2023 Igor Sokół</p>
             </div>
         </footer>
     </footer>
